Add basic structure for heading and category area

--- a/index.html
+++ b/index.html
@@ -8,7 +8,42 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Title</h1>
+    <div>
+        <p>Subheading</p>
+    </div>
+    <div class="category-choice">
+        <span id="cat1">
+            <button>
+                <p>cat1</p>
+            </button>
+        </span>
+        <span id="cat2">
+            <button>
+                <p>cat2</p>
+            </button>
+        </span>
+        <span id="cat3">
+            <button>
+                <p>cat3</p>
+            </button>
+        </span>
+        <span id="cat4">
+            <button>
+                <p>cat4</p>
+            </button>
+        </span>
+        <span id="cat5">
+            <button>
+                <p>cat5</p>
+            </button>
+        </span>
+        <span id="cat6">
+            <button>
+                <p>cat6</p>
+            </button>
+        </span>
+    </div>
 
     <script src="assets/javascript/script.js"></script>
 </body>
