Alter basic structure and layout styling of home page

--- a/index.html
+++ b/index.html
@@ -8,43 +8,44 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Title</h1>
+    <header>
+        <h1 id="title">Title</h1>
+        <span>
+            <p id="score">Score</p>
+        </span>
+    </header>
+
     <div>
         <p>Subheading</p>
     </div>
     <div class="category-choice">
-        <span id="cat1">
-            <button>
-                <p>cat1</p>
-            </button>
-        </span>
-        <span id="cat2">
-            <button>
-                <p>cat2</p>
-            </button>
-        </span>
-        <span id="cat3">
-            <button>
-                <p>cat3</p>
-            </button>
-        </span>
-        <span id="cat4">
-            <button>
-                <p>cat4</p>
-            </button>
-        </span>
-        <span id="cat5">
-            <button>
-                <p>cat5</p>
-            </button>
-        </span>
-        <span id="cat6">
-            <button>
-                <p>cat6</p>
-            </button>
-        </span>
+        <div>
+            <span class="cat1">
+                <p>Category 1</p>
+            </span>
+            <span class="cat2">
+                <p>Category 2</p>
+            </span>
+            <span class="cat3">
+                <p>Category 3</p>
+            </span>
+        </div>
+        <div>
+            <span class="cat4">
+                <p>Category 4</p>
+            </span>
+            <span class="cat5">
+                <p>Category 5</p>
+            </span>
+            <span class="cat6">
+                <p>Category 6</p>
+            </span>
+        </div>
     </div>
 
+    <footer>
+        Mail icon
+    </footer>
     <script src="assets/javascript/script.js"></script>
 </body>
 </html>
