--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/94b2e200e5.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>notPub Quiz</title>
 </head>
 <body>
     <header>
@@ -16,6 +16,8 @@
         </span>
     </header>
 
+<!-- test link to quiz page -->
+    <a href="quiz.html">quiz page</a>
     <section id="category-area">
         <div id="choose-cat">
             <p>Choose a category and test your knowledge with 10 questions!</p>
