Add custom fonts and style headings

--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 </head>
 <body>
     <header>
-        <h2 class="title" id="title-one">not</h2><h1 class="title">Pub Quiz<i class="fas fa-trophy"></i></h1>
-        <span>
-            <h3 id="score">Previous score: 0</h3>
-        </span>
+        <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        <h2 id="score">Previous score: 0</h2>
     </header>
 
 <!-- test link to quiz page -->
     <a href="quiz.html">quiz page</a>
     <section id="category-area">
         <div id="choose-cat">
-            <p>Choose a category and test your knowledge with 10 questions!</p>
+            <h2>Choose a category and test your knowledge with 10 questions!</h2>
         </div>
         <div class="category-choice">
             <div id="cats-a">
@@ -48,7 +46,7 @@
         </div>
     </section>
     <footer>
-       <p>get in touch <i class="far fa-envelope"></i></p>
+       <h2 id="contact">get in touch <i class="far fa-envelope"></i></h2>
     </footer>
     <script src="assets/javascript/script.js"></script>
 </body>
