--- a/quiz.html
+++ b/quiz.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <h2 class="title" id="title-one">not</h2><h1 class="title">Pub Quiz<i class="fas fa-trophy"></i></h1>
-        <span>
-            <h3 id="score">
+        <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        <span id="categories-btn">
+            <h2>
                 <a href="index.html">Categories</a>
-            </h3>
+            </h2>
         </span>
     </header>
 
