Add styling to quiz page and style all buttons

--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 </head>
 <body>
     <header>
-        <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        <a href="index.html">
+            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        </a>
         <h2 id="score">Previous score: 0</h2>
     </header>
 
-<!-- test link to quiz page -->
+    <!-- test link to quiz page -->
     <a href="quiz.html">quiz page</a>
-    <section id="category-area">
+    <section class="game-area">
         <div id="choose-cat">
             <h2>Choose a category and test your knowledge with 10 questions!</h2>
         </div>
         <div class="category-choice">
             <div id="cats-a">
-                <span class="cat1">
+                <span class="cat1 cat-btn">
                     <p>art & literature</p>
                 </span>
-                <span class="cat2">
+                <span class="cat2 cat-btn">
                     <p>science</p>
                 </span>
-                <span class="cat3">
+                <span class="cat3 cat-btn">
                     <p>geography & history</p>
                 </span>
             </div>
             <div id="cats-b">
-                <span class="cat4">
+                <span class="cat4 cat-btn">
                     <p>sport</p>
                 </span>
-                <span class="cat5">
+                <span class="cat5 cat-btn">
                     <p>film & tv</p>
                 </span>
-                <span class="cat6">
+                <span class="cat6 cat-btn">
                     <p>random!</p>
                 </span>
             </div>
