--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        <a href="index.html">
+            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+        </a>
         <span id="categories-btn">
             <h2>
                 <a href="index.html">Categories</a>
@@ -18,7 +20,27 @@
         </span>
     </header>
 
-
+    <section class="game-area">
+        <div id="question">
+            <h2></h2>
+        </div>
+        <div id="qs-one">
+            <span class="answer-btn">
+                <p></p>
+            </span>
+            <span class="answer-btn">
+                <p></p>
+            </span>
+        </div>
+        <div id="qs-two">
+            <span class="answer-btn">
+                <p></p>
+            </span>
+            <span class="answer-btn">
+                <p></p>
+            </span>
+        </div>
+    </section>
 
     <footer>
         <p>get in touch <i class="far fa-envelope"></i></p>
