Link category buttons to quiz page

--- a/index.html
+++ b/index.html
@@ -24,26 +24,38 @@
         </div>
         <div class="category-choice">
             <div id="cats-a">
-                <span class="cat1 cat-btn">
-                    <p>art & literature</p>
-                </span>
-                <span class="cat2 cat-btn">
-                    <p>science</p>
-                </span>
-                <span class="cat3 cat-btn">
-                    <p>geography & history</p>
-                </span>
+                <a href="quiz.html" class="btn">
+                    <span class="cat1 cat-btn">
+                        <p>art & literature</p>
+                    </span>
+                </a>
+                <a href="quiz.html" class="btn">
+                    <span class="cat2 cat-btn">
+                        <p>science</p>
+                    </span>
+                </a>
+                <a href="quiz.html" class="btn">
+                    <span class="cat3 cat-btn">
+                        <p>geography & history</p>
+                    </span>
+                </a>
             </div>
             <div id="cats-b">
-                <span class="cat4 cat-btn">
-                    <p>sport</p>
-                </span>
-                <span class="cat5 cat-btn">
-                    <p>film & tv</p>
-                </span>
-                <span class="cat6 cat-btn">
-                    <p>random!</p>
-                </span>
+                <a href="quiz.html" class="btn">
+                    <span class="cat4 cat-btn">
+                        <p>sport</p>
+                    </span>
+                </a>
+                <a href="quiz.html" class="btn">
+                    <span class="cat5 cat-btn">
+                        <p>film & tv</p>
+                    </span>
+                </a>
+                <a href="quiz.html" class="btn">
+                    <span class="cat6 cat-btn">
+                        <p>random!</p>
+                    </span>
+                </a>
             </div>
         </div>
     </section>
