--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/94b2e200e5.js" crossorigin="anonymous"></script>
     <title>notPub Quiz</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz<i class="fas fa-trophy"></i></h1>
+            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
         </a>
         <h2 id="score">Previous score: 0</h2>
     </header>
