Fix content and styling of quiz page game area

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">
             <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
         </a>
-        <h2 id="score">Previous score: 0</h2>
+        <h2 id="prev-score">Previous score: 0</h2>
     </header>
 
     <!-- test link to quiz page -->
