--- a/quiz.html
+++ b/quiz.html
@@ -22,6 +22,14 @@
     </header>
 
     <section class="game-area">
+        <div>
+            <span class="small-span">
+                <p>Q </p><p id="current-q"></p><p>of 10</p>
+            </span>
+            <span class="small-span right-span">
+                <p>correct answers: </p><p id="score"></p>
+            </span>
+        </div>
         <div id="question">
             <h2></h2>
         </div>
@@ -39,6 +47,14 @@
             </span>
             <span class="answer-btn">
                 <p></p>
+            </span>
+        </div>
+        <div>
+            <span class="small-span" id="restart-btn">
+                <p>restart</p>
+            </span>
+            <span class="small-span right-span" id="quit-btn">
+                <a href="index.html" class="btn"><p>quit</p></a>
             </span>
         </div>
     </section>
