Add basic workflow to script.js and begin coding functions

--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
         <div class="category-choice">
             <div id="cats-a">
                 <a href="quiz.html" class="btn">
-                    <span class="cat1 cat-btn">
+                    <span class="cat-btn" id="cat1">
                         <p>art & literature</p>
                     </span>
                 </a>
                 <a href="quiz.html" class="btn">
-                    <span class="cat2 cat-btn">
+                    <span class="cat-btn" id="cat2">
                         <p>science</p>
                     </span>
                 </a>
                 <a href="quiz.html" class="btn">
-                    <span class="cat3 cat-btn">
+                    <span class="cat-btn" id="cat3">
                         <p>geography & history</p>
                     </span>
                 </a>
             </div>
             <div id="cats-b">
                 <a href="quiz.html" class="btn">
-                    <span class="cat4 cat-btn">
+                    <span class="cat-btn" id="cat4">
                         <p>sport</p>
                     </span>
                 </a>
                 <a href="quiz.html" class="btn">
-                    <span class="cat5 cat-btn">
+                    <span class="cat-btn" id="cat5">
                         <p>film & tv</p>
                     </span>
                 </a>
                 <a href="quiz.html" class="btn">
-                    <span class="cat6 cat-btn">
+                    <span class="cat-btn" id="cat6">
                         <p>random!</p>
                     </span>
                 </a>
