--- a/quiz.html
+++ b/quiz.html
@@ -31,22 +31,22 @@
             </span>
         </div>
         <div id="question">
-            <h2></h2>
+            <h2 id="question-text"></h2>
         </div>
         <div id="qs-one">
             <span class="answer-btn">
-                <p></p>
+                <p class="answer-text"></p>
             </span>
             <span class="answer-btn">
-                <p></p>
+                <p class="answer-text"></p>
             </span>
         </div>
         <div id="qs-two">
             <span class="answer-btn">
-                <p></p>
+                <p class="answer-text"></p>
             </span>
             <span class="answer-btn">
-                <p></p>
+                <p class="answer-text"></p>
             </span>
         </div>
         <div>
