Add javascript to load and populate cat choices on homepage

--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,10 @@
 
     <footer>
         <p>get in touch <i class="far fa-envelope"></i></p>
-     </footer>
-     <script src="assets/javascript/script.js"></script>
+    </footer>
+
+    <script src="assets/javascript/questions.js"></script>
+    <script src="assets/javascript/home.js"></script>
+    <script src="assets/javascript/quiz.js"></script>
 </body>
 </html>
