--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div id="choose-cat">
             <h2>Choose a category and test your knowledge with 10 questions!</h2>
         </div>
-        <div class="category-choice">
-            <div id="cats-a">
+        <div id="category-container" class="category-choice">
+            <!-- <div id="cats-a">
                 <a href="quiz.html" class="btn">
                     <span class="cat-btn" id="cat1">
                         <p>art & literature</p>
@@ -57,12 +57,15 @@
                         <p>random!</p>
                     </span>
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
     <footer>
        <h2 id="contact">get in touch <i class="far fa-envelope"></i></h2>
     </footer>
-    <script src="assets/javascript/script.js"></script>
+    
+    <script src="assets/javascript/questions.js"></script>
+    <script src="assets/javascript/home.js"></script>
+    <script src="assets/javascript/quiz.js"></script>
 </body>
 </html>
