--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
     
     <script src="assets/javascript/questions.js"></script>
     <script src="assets/javascript/home.js"></script>
-    <script src="assets/javascript/quiz.js"></script>
+    <!-- <script src="assets/javascript/quiz.js"></script> -->
 </body>
 </html>
