--- a/quiz.html
+++ b/quiz.html
@@ -64,7 +64,7 @@
     </footer>
 
     <script src="assets/javascript/questions.js"></script>
-    <script src="assets/javascript/home.js"></script>
+    <!-- <script src="assets/javascript/home.js"></script> -->
     <script src="assets/javascript/quiz.js"></script>
 </body>
 </html>
