--- a/quiz.html
+++ b/quiz.html
@@ -24,10 +24,10 @@
     <section class="game-area">
         <div>
             <span class="small-span">
-                <p>Q </p><p id="current-q"></p><p>of 10</p>
+                <p>Question</p><p id="current-q">0</p><p>of 10</p>
             </span>
             <span class="small-span right-span">
-                <p>correct answers: </p><p id="score"></p>
+                <p>correct answers: </p><p id="score">0</p>
             </span>
         </div>
         <div id="question">
