Add random questions category

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </section>
     <footer>
-       <h2 id="contact">get in touch <i class="far fa-envelope"></i></h2>
+       <h2 id="contact">get in touch <a href="https://mail.google.com" target="_blank" rel="noopener" aria-label="Send us an email"><i class="far fa-envelope"></i></a></i></h2>
     </footer>
     
     <script src="assets/javascript/questions.js"></script>
