Edit functions to allow for checking of correct answer and score incrementation

--- a/index.html
+++ b/index.html
@@ -17,47 +17,12 @@
         <h2 id="prev-score">Previous score: 0</h2>
     </header>
 
-    <!-- test link to quiz page -->
-    <a href="quiz.html">quiz page</a>
     <section class="game-area">
         <div id="choose-cat">
             <h2>Choose a category and test your knowledge with 10 questions!</h2>
         </div>
         <div id="category-container" class="category-choice">
-            <!-- <div id="cats-a">
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat1">
-                        <p>art & literature</p>
-                    </span>
-                </a>
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat2">
-                        <p>science</p>
-                    </span>
-                </a>
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat3">
-                        <p>geography & history</p>
-                    </span>
-                </a>
-            </div>
-            <div id="cats-b">
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat4">
-                        <p>sport</p>
-                    </span>
-                </a>
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat5">
-                        <p>film & tv</p>
-                    </span>
-                </a>
-                <a href="quiz.html" class="btn">
-                    <span class="cat-btn" id="cat6">
-                        <p>random!</p>
-                    </span>
-                </a>
-            </div> -->
+            <!-- category choice buttons will be set here by home.js -->
         </div>
     </section>
     <footer>
@@ -66,6 +31,5 @@
     
     <script src="assets/javascript/questions.js"></script>
     <script src="assets/javascript/home.js"></script>
-    <!-- <script src="assets/javascript/quiz.js"></script> -->
 </body>
 </html>
