--- a/quiz.html
+++ b/quiz.html
@@ -49,10 +49,7 @@
                 <p class="answer-text"></p>
             </span>
         </div>
-        <div>
-            <span class="small-span" id="restart-btn">
-                <p>restart</p>
-            </span>
+        <div id="quit-area">
             <span class="small-span right-span" id="quit-btn">
                 <a href="index.html" class="btn"><p>quit</p></a>
             </span>
@@ -64,7 +61,6 @@
     </footer>
 
     <script src="assets/javascript/questions.js"></script>
-    <!-- <script src="assets/javascript/home.js"></script> -->
     <script src="assets/javascript/quiz.js"></script>
 </body>
 </html>
