Change background styling and fix styling of quiz page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a href="index.html">
             <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
         </a>
-        <h2 id="prev-score">Previous score: 0</h2>
+        <span id="prev-span">
+            <h2>Previous score: <h2 id="prev-score">0</h2></h2>
+        </span>
     </header>
 
     <section class="game-area">
@@ -26,10 +28,10 @@
         </div>
     </section>
     <footer>
-       <h2 id="contact">get in touch <a href="https://mail.google.com" target="_blank" rel="noopener" aria-label="Send us an email"><i class="far fa-envelope"></i></a></i></h2>
+       <a href="https://mail.google.com" target="_blank" rel="noopener" aria-label="Send us an email"><h2 id="contact">get in touch <i class="far fa-envelope"></i></h2></a>
     </footer>
     
-    <script src="assets/javascript/questions.js"></script>
-    <script src="assets/javascript/home.js"></script>
+    <script src="assets/javascript/questions.js" type="text/javascript"></script>
+    <script src="assets/javascript/home.js" type="text/javascript"></script>
 </body>
 </html>
