--- a/quiz.html
+++ b/quiz.html
@@ -54,13 +54,21 @@
                 <a href="index.html" class="btn"><p>quit</p></a>
             </span>
         </div>
+        <div id="score-modal">
+            <div id="modal-content">
+                <span id="modal-close">&times;</span>
+                <span id="modal-message">
+                    <p>Well done! You scored <p id="modal-score"></p></p>
+                </span>
+            </div>
+        </div>
     </section>
 
     <footer>
         <p>get in touch <i class="far fa-envelope"></i></p>
     </footer>
 
-    <script src="assets/javascript/questions.js"></script>
-    <script src="assets/javascript/quiz.js"></script>
+    <script src="assets/javascript/questions.js" type="text/javascript"></script>
+    <script src="assets/javascript/quiz.js" type="text/javascript"></script>
 </body>
 </html>
