Complete score modal and alter quit functionality

--- a/quiz.html
+++ b/quiz.html
@@ -51,21 +51,26 @@
         </div>
         <div id="quit-area">
             <span class="small-span right-span" id="quit-btn">
-                <a href="index.html" class="btn"><p>quit</p></a>
+                <a id="quit-link" class="btn"><p>quit</p></a>
             </span>
         </div>
         <div id="score-modal">
             <div id="modal-content">
-                <span id="modal-close">&times;</span>
+                <!-- <span id="modal-close">&times;</span> -->
                 <span id="modal-message">
                     <p>Well done! You scored <p id="modal-score"></p></p>
                 </span>
+                <div id="categories-btn-2">
+                    <h2>
+                        <a href="index.html">Categories</a>
+                    </h2>
+                </div>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>get in touch <i class="far fa-envelope"></i></p>
+       <a href="https://mail.google.com" target="_blank" rel="noopener" aria-label="Send us an email"><h2 id="contact">get in touch <i class="far fa-envelope"></i></h2></a>
     </footer>
 
     <script src="assets/javascript/questions.js" type="text/javascript"></script>
