Complete media queries with max width 505 and 355

--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
-        </a>
+        <span id="full-title">
+            <a href="index.html">
+                <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
+            </a>
+        </span>
         <span id="categories-btn">
             <h2>
                 <a href="index.html">Categories</a>
