--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
-        </a>
+        <span id="full-title">
+             <a href="index.html">
+                <h2 class="title" id="title-one">not</h2><h1 class="title" id="title-two">Pub Quiz <i class="fas fa-beer"></i></h1>
+            </a>
+        </span>
+       
         <span id="prev-span">
             <h2>Previous score: <h2 id="prev-score">0</h2></h2>
         </span>
