--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A fun online pub quiz that you can enjoy anywhere. Test your knowledge in a range of subjects.">
+    <meta name="keywords" content="quiz, pub quiz, online quiz, quiz with friends, quiz at home, quiz categories">
+    <meta name="author" content="Ellie Thurlwell">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/94b2e200e5.js" crossorigin="anonymous"></script>
@@ -58,7 +61,6 @@
         </div>
         <div id="score-modal">
             <div id="modal-content">
-                <!-- <span id="modal-close">&times;</span> -->
                 <span id="modal-message">
                     <p>Well done! You scored <p id="modal-score"></p></p>
                 </span>
@@ -75,7 +77,7 @@
        <a href="https://mail.google.com" target="_blank" rel="noopener" aria-label="Send us an email"><h2 id="contact">get in touch <i class="far fa-envelope"></i></h2></a>
     </footer>
 
-    <script src="assets/javascript/questions.js" type="text/javascript"></script>
-    <script src="assets/javascript/quiz.js" type="text/javascript"></script>
+    <script src="assets/javascript/questions.js"></script>
+    <script src="assets/javascript/quiz.js"></script>
 </body>
 </html>
